<resources>
    <string name="app_name">d04</string>
    <string name="action_settings">Settings</string>

    <string name="view_main">Main (status)</string>
    <string name="view_notify">Notify</string>
    <string name="view_outputs">Outputs</string>
    <string name="bottomMain">Home</string>
    <string name="bot_outputs">Outputs</string>
    <string name="bot_notify">Notify</string>
    <string name="view_objects">Objects</string>
    <string name="menu_obj">Объекты</string>
    <string name="view_about">О программе</string>
    <string name="main_menu_about">О программе</string>
    <string name="view_objects_edit">Edit</string>
    <string name="obj_menu_obj_add">Add</string>
    <string name="title_obj">Объекты</string>
    <string name="title_obj_new">Новый объект</string>
    <string name="main_menu_account">Аккаунт</string>
    <string name="view_account">Account</string>
    <string name="title_notify1">Уведомления</string>
    <string name="title_outputs">Выходы</string>
    <string name="button_http">HTTP</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_obj_edit">Изменить</string>
    <string name="enter_new_number">Введите номер объекта:</string>
    <string name="enter_descr">Описание:</string>
    <string name="enter_code">Код пользователя:</string>
    <string name="text_save">Сохранить</string>
    <string name="number_obj">Номер объекта:</string>
    <string name="text_view_login">Логин:</string>
    <string name="text_view_pass">Пароль:</string>
    <string name="text_view_server">Сервер:</string>
    <string name="text_view_port">Порт:</string>
    <string name="err_acc_message">Заполните все поля</string>
    <string name="text_delete">Удалить</string>
    <string name="err_obj_message">Допустимы только 0-9,A-F</string>
    <string name="obj_empty">Нет объектов</string>
    <string name="title_about">О программе</string>
    <string name="title_account">Аккаунт</string>
    <string name="default_notification_channel_id">notification</string>
    <string name="fcm_message">fcm message</string>
    <string name="button_text_sub">subscribe</string>
    <string name="title_events">уведомления</string>
    <string name="bot_info">Info</string>
    <string name="text_close">close</string>
    <string name="text_open">open</string>
    <string name="button_text_clear">Clear</string>
    <string name="main_menu_log">Log</string>
    <string name="text_req_stat">Upd</string>
    <string name="text_req_temp">Temp</string>
    <string name="text_set_out5">5град</string>
    <string name="text_set_out_bi">bi</string>
    <string name="button_text_test">test</string>
    <string name="are_you_sure">Вы уверены?</string>
    <string name="delete_object">Объект будет удален</string>
    <string name="text_shutdown">Выйти из приложения?</string>
    <string name="textxx">xx</string>
    <string name="text_out_funct">Функция выхода - </string>
    <string name="text_out_value_temper">Температура</string>
    <string name="text_switch_out_remote">Ручное управление</string>
    <string name="text_out_value_set">Порог включения</string>
    <string name="text_out_remote_set">Включить на время, мин</string>
    <string name="text_turn_on">Включить</string>
    <string name="text_apply">Применить</string>
    <string name="text_notify_sms">notify sms</string>
    <string name="main_menu_notify2">PushSms</string>
    <string name="text_title_notify2">Текстовые уведомления</string>
    <string name="title_log_fragment">Лог</string>
    <string name="title_hidden_fragment">Test</string>
    <string name="text_number_object">Номер объекта</string>
    <string name="funct_out_termoup">охлаждение</string>
    <string name="funct_out_termodown">обогрев</string>
    <string name="title_out_termo">Настройка выхода</string>
    <string name="text_termo_index_temper">Датчик</string>
    <string name="text_cmd_sended">Команда отправлена</string>
</resources>
