<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv55_1"
                style="@style/tvstyle1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:text="@string/text_view_login">
            </TextView>

            <EditText
                android:id="@+id/et_55_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center">
            </EditText>

            <TextView
                android:id="@+id/tv55_2"
                style="@style/tvstyle1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:text="@string/text_view_pass">
            </TextView>

            <EditText
                android:id="@+id/et_55_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textAlignment="center">
            </EditText>

            <TextView
                android:id="@+id/tv55_3"
                style="@style/tvstyle1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:text="@string/text_view_server">
            </TextView>

            <EditText
                android:id="@+id/et_55_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"></EditText>
            <TextView
                android:id="@+id/tv55_4"
                style="@style/tvstyle1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:text="@string/text_view_port">
            </TextView>

            <EditText
                android:id="@+id/et_55_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"></EditText>

            <Button
                android:id="@+id/btn_55_1"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="20dp"
                android:text="@string/text_save">
            </Button>

        </LinearLayout>
    </ScrollView>

</layout>