<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:id="@+id/linearLayout121">

    <Button
        android:id="@+id/buttonSub"
        style="@style/btnStyle3"
        android:text="@string/button_text_sub" />
    <Button
        android:id="@+id/button1"
        style="@style/btnStyle3"
        app:cornerRadius="10dp"
        android:text="@string/button_text_test" />
    <Button
        android:id="@+id/button2"
        android:text="@string/button_text_test"
        app:cornerRadius="10dp"
        style="@style/btnStyle3" />
    <Button
        android:id="@+id/button3"
        style="@style/btnStyle3"
        app:cornerRadius="16dp"
        android:text="@string/textxx"
        android:enabled="false"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_log_sub"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:bufferType="spannable"
            android:drawablePadding="2dp"
            android:fadingEdge="vertical"
            android:fadingEdgeLength="5dp"
            android:isScrollContainer="true"
            android:scrollbarStyle="outsideInset"
            android:scrollbars="vertical">
        </TextView>
    </ScrollView>

</LinearLayout>