<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linearLayout51"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv6_2"
                style="@style/tvstyle1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/enter_new_number">
            </TextView>

            <EditText
                android:id="@+id/et_61_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="0123456789ABCDEF"
                android:hint="Номер объекта"
                android:inputType="textCapCharacters"
                android:textAlignment="center">
                <requestFocus />
            </EditText>

            <TextView
                android:id="@+id/tv61_2"
                style="@style/tvstyle1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:text="@string/enter_descr">
            </TextView>

            <EditText
                android:id="@+id/et_61_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Описание объекта"
                android:textAlignment="center">
            </EditText>

            <TextView
                android:id="@+id/tv61_3"
                style="@style/tvstyle1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:text="@string/enter_code">
            </TextView>

            <EditText
                android:id="@+id/et_61_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Код пользователя"
                android:inputType="numberPassword"
                android:textAlignment="center">
            </EditText>

            <Button
                android:id="@+id/btn_6_1"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="40dp"
                android:layout_marginRight="5dp"
                android:text="@string/text_save">
            </Button>

        </LinearLayout>
    </ScrollView>
</layout>