<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linearLayout64"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv64_1"
                    style="@style/tvstyle1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:gravity="center_vertical"
                    android:text="@string/text_out_funct">
                </TextView>

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/radio_f1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <RadioButton
                        android:id="@+id/radio_f2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />
                </RadioGroup>
            </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tv64_2"
                style="@style/tvstyle1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="2dp"
                android:layout_marginStart="4dp"
                android:gravity="center_vertical"
                android:text="@string/text_out_value_temper">
            </TextView>
            <NumberPicker
                android:id="@+id/npVal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:gravity="center_horizontal" />

        </LinearLayout>

            <TextView
                android:id="@+id/tv64_3"
                style="@style/tvstyle1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp" >
            </TextView>

            <com.google.android.material.chip.ChipGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <SeekBar
                android:id="@+id/seekBar2"
                style="@style/Widget.AppCompat.SeekBar.Discrete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:max="30" />

            <Button
                android:id="@+id/btn_64_1"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="40dp"
                android:layout_marginRight="5dp"
                android:text="@string/text_save">
            </Button>

        </LinearLayout>
    </ScrollView>
</layout>