<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linearLayout64"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvTermoFunct"
                style="@style/tvstyle11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="16dp"
                android:gravity="center_vertical"
                android:text="@string/text_out_funct"/>
            <TextView
                android:id="@+id/tvTermoDescr"
                style="@style/tvstyle11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="16dp">
            </TextView>


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="4dp">

<!--                    <LinearLayout-->
<!--                        android:layout_width="match_parent"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:layout_marginTop="8dp"-->
<!--                        android:orientation="horizontal">-->

<!--                        <TextView-->
<!--                            android:id="@+id/tv65_41"-->
<!--                            style="@style/tvstyle12"-->
<!--                            android:layout_width="0dp"-->
<!--                            android:layout_height="match_parent"-->
<!--                            android:layout_weight="1"-->
<!--                            android:text="@string/text_termo_index_temper"/>-->

<!--                        <TextView-->
<!--                            android:id="@+id/tv_termo_index"-->
<!--                            style="@style/tvstyle11"-->
<!--                            android:layout_width="0dp"-->
<!--                            android:layout_height="match_parent"-->
<!--                            android:layout_weight="1"/>-->
<!--                    </LinearLayout>-->
                    <TextView
                        android:id="@+id/tvTemperDevice"
                        style="@style/tvstyle12"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/tv65_21"
                            style="@style/tvstyle12"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="3"
                            android:text="@string/text_out_value_temper"/>

                        <TextView
                            android:id="@+id/tv_termo_fact_temper"
                            style="@style/tvstyle11"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/tv65_31"
                            style="@style/tvstyle12"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="3"
                            android:text="@string/text_out_value_set"/>

                        <TextView
                            android:id="@+id/tv_termo_toggle"
                            style="@style/tvstyle11"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1" />
                    </LinearLayout>

                    <SeekBar
                        android:id="@+id/seekbar_termo_toggle"
                        style="@style/Widget.AppCompat.SeekBar.Discrete"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:max="30" />

                    <Button
                        android:id="@+id/btn_termo_save"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginRight="16dp"
                        android:text="@string/text_apply"/>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </ScrollView>
</layout>